syntax = "proto3";

package catservice;

option go_package = "catservice/pb";

message CreateCatRequest {
  string name = 1;
  string date_of_birth = 2;
  string image_url = 3;
}

message GetCatByIdRequest {
  string id = 1;
}

message GetAllCatsRequest {
  uint32 page = 1;
  uint32 per_page = 2;
}

message CreateCatResponse {
  string id = 1;
}

message GetCatByIdResponse {
  Cat cat = 1;
}

message Cat {
  string id = 1;
  string name = 2;
  string date_of_birth = 3;
  string image_url = 4;
}

message GetAllCatsResponse {
  repeated Cat cats = 1;
}

service CatService {
  rpc GetCatById(GetCatByIdRequest) returns (GetCatByIdResponse);
  rpc GetAllCats(GetAllCatsRequest) returns (GetAllCatsResponse);
  rpc CreateCat(CreateCatRequest) returns (CreateCatResponse);
}